data/derived/fa15/progs/unify/prog1010.ml.out
Characters 234-236:
  | Average (e1,e2)      -> ((eval e1) +. (eval e2)) /. 2
                                   ^^
Error: This expression has type expr but an expression was expected of type
         expr * float * 'a
